--- a/INDEX.html
+++ b/INDEX.html
@@ -11,52 +11,47 @@
 </head>
 <body>
   <!-- Header / Navbar -->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+  <nav class="navbar bg-body-tertiary ">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">INTERACTURIA</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Expositions
-            </a>
-            <ul id="expositions-dropdown" class="dropdown-menu">
-              <!-- Dropdown options -->
-            </ul>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <!-- Main content -->
-  <div class="container-fluid main-content">
-    <div class="row">
-      <!-- Left Sidebar with Buttons -->
-      <div class="col-md-2 left-sidebar">
-        <button class="btn btn-primary w-100 my-2">Enlace 1</button>
-        <button class="btn btn-primary w-100 my-2">Enlace 2</button>
-        <button class="btn btn-primary w-100 my-2">Enlace 3</button>
-        <button class="btn btn-primary w-100 my-2">Enlace 4</button>
-        <button class="btn btn-primary w-100 my-2">Enlace 5</button>
-      </div>
-      <!-- Right Sidebar with Image Carousel -->
-      <div class="col-md-2 right-sidebar">
-        <div id="image-carousel">
-          <img id="carousel-image" src="images/img1.jpg" alt="Image 1" class="img-fluid">
-          <button id="prev-btn" class="btn btn-secondary mt-2">&lt;</button>
-          <button id="next-btn" class="btn btn-secondary mt-2">&gt;</button>
+      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">INTERACTURIA</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Dropdown
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+          </ul>
+          <form class="d-flex mt-3" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
         </div>
       </div>
     </div>
-  </div>
+  </nav>
 
   <!-- Footer -->
   <footer class="bg-light text-center text-lg-start mt-auto">
