--- a/INDEX.html
+++ b/INDEX.html
@@ -57,7 +57,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mosaico de Imágenes</title>
+  <title>Museu viu de les ferramentes</title>
   <style>
     .gallery {
       display: grid;
