--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="styles.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PV7VT7E1J0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PV7VT7E1J0');
+</script>
 <body>
   <!-- Header / Navbar -->
   <nav class="navbar bg-body-tertiary ">
