--- a/index.html
+++ b/index.html
@@ -64,6 +64,18 @@
   <!DOCTYPE html>
 <html lang="es">
 <head>
+  <main>
+    <div class="titulo">
+        <h1><b>Museu viu de les ferramentes</b></h1>
+        <h2>L'agricultura valenciana és molt coneguda en tot el món, entre altres coses per la 
+          qualitat dels seus productes, les gents que la practiquen i per les seues tecnologies.
+          La nostra agricultura s'ha anat adaptant al pas del temps i de les diferents cultures que 
+          han poblat el nostre territori, deixant una petjada que s'ha transmés en l'evolució dels 
+          diferents cultius, treballs i eines utilitzades. El resultat és un sistema agrari molt 
+          competitiu. Aquest museu es planteja com un estudi de les diferents eines que s'han 
+          emprat i s'empren, acostant-nos a aquests canvis tecnològics que ens han construït 
+          com a poble.</h2>
+    </div>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Museu viu de les ferramentes</title>
@@ -114,7 +126,7 @@
   <!-- Footer -->
   <footer class="text-center text-lg-start mt-auto">
     <div class="text-center p-3">
-      © 2024 INTERACTURIA. All Rights Reserved.
+      Aquest projecte es publica baix llicència Creative Commons BY-SA 4.0 
     </div>
   </footer>
 
