--- a/index.html
+++ b/index.html
@@ -83,13 +83,16 @@
     .gallery {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-      gap: 10px;
+      gap: 60px;
     }
     .gallery img {
-      width: 100%;
-      height: auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       cursor: pointer;
       transition: transform 0.5s ease;
+      gap: 5px;
+      width: 150%;
+      max-width: 1200px;
     }
     .gallery img:hover {
       transform: scale(1.1);
