--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
       gap: 60px;
+      margin: 20px;
+      margin: 0 auto;
     }
     .gallery img {
       display: grid;
@@ -91,6 +93,7 @@
       cursor: pointer;
       transition: transform 0.5s ease;
       gap: 5px;
+      margin: 10px;
       width: 150%;
       max-width: 1200px;
     }
