--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   <!-- Footer -->
   <footer class="text-center text-lg-start mt-auto">
     <div class="text-center p-3">
-      Aquest projecte es publica baix llicència Creative Commons BY-SA 4.0 
+      Aquest projecte es publica baix llicència Creative Commons BY-SA 4.0 <a href="#"><u>Més informació</u></a>
     </div>
   </footer>
 
