--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
               </ul>
             </li>
           </ul>
+          <a class="nav-link active" aria-current="page" href="https://interacturia.github.io/Llicencia-i-Agra-ments/">Llicencia i Agraïments</a>
           <form class="d-flex mt-3" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
@@ -132,7 +133,7 @@
   <!-- Footer -->
   <footer class="text-center text-lg-start mt-auto">
     <div class="text-center p-3">
-      Aquest projecte es publica baix llicència Creative Commons BY-SA 4.0 <a href="#"><u>Més informació</u></a>
+      Aquest projecte es publica baix llicència Creative Commons BY-SA 4.0 <a href="https://interacturia.github.io/Llicencia-i-Agra-ments/"><u>Més informació</u></a>
     </div>
   </footer>
 
